Fix url overflowing from chat bubble

--- a/src/web/src/components/ChatBubble.css
+++ b/src/web/src/components/ChatBubble.css
@@ -4,6 +4,7 @@
   box-shadow: 0 2px 6px rgba(20, 48, 84, 0.2);
   border: 1px solid #DAE1E8;
   width: 250px;
+  word-wrap: break-word;
 }
 
 .current-user { 
